# triton-backend-demo

./: Dockerfile  README.md  client.py  opencv_install.sh
image_process/: CMakeLists.txt  image_process.cc  image_process_cuda.cc
image_process/cmake/: ImageProcessBackendConfig.cmake.in
image_process/kernel/: CMakeLists.txt  geo.h  norm.cu  norm.h
models/image_process/: config.pbtxt
